--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
+    <script src="script.js"></script>
 
     <title>Document</title>
 </head>
