--- a/ex.Random.html
+++ b/ex.Random.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <script defer src="main.js"></script>
-
+    <script defer src="exo1.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <div id="rond"></div>
-    <div class="carres"></div>
-    <div class="carres"></div>
-    <div class="carres"></div>
-    <div class="carres"></div>
-    <div class="carres"></div>
+    <a href="index.html">home</a>
+    <button>BIANVENUE</button>
+    <img img id="img" src="" alt="">
+    <div class="test" id="test1"></div>
+    <div class="test" id="test2"></div>
+    <div class="test" id="test3"></div>
 </body>
 </html>
